log/res works yay

--- a/login.html
+++ b/login.html
@@ -9,13 +9,13 @@
         <script src="db.php"></script>
     </head>
     <body>
-        <form action="db.php" method="post">
+        <form action="login.php" method="post">
             <div class="container">
                 <h1>Login</h1>
                 <p>Email</p>
-                <input type="text" placeholder="Enter email" name="log_email" id="email" required><br>
+                <input type="text" placeholder="Enter email" name="email" id="email" required><br>
                 <p>Password</p>
-                <input type="text" placeholder="Enter password" minlength="6" name="log_pwd" id="pwd" required><br><br>
+                <input type="text" placeholder="Enter password" minlength="6" name="pwd" id="pwd" required><br><br>
                 
                 <button type="submit" style="float: right;" name="login">Submit</button><br><br>
                 <a href="register.html">Not registered? Register</a>
